# balaencedbot_esp_ide

./: .gitignore  BSW_COMPREHENSIVE_STATUS_REPORT.md  BSW_FINAL_UPGRADE_SUMMARY.md  CMakeLists.txt  Doxyfile  GPIO_V3_UPGRADE_GUIDE.md  I2C_ADC_UPGRADE_GUIDE.md  LICENSE  README.md  README_TESTING.md  SECURITY.md  custom_doxygen.css  package-lock.json  partitions.csv  run_gui_simulator.sh  run_integrated_simulator.sh  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1  test_i2c_scan.c  test_runner.bat
main/: CMakeLists.txt  config.h  main.c
main/bsw/: ADC_DRIVER_ANALYSIS.md  BITWISE_LOGGING_GUIDE.md  CMakeLists.txt  GPIO_DRIVER_ANALYSIS.md  I2C_DRIVER_IMPROVEMENTS.md  I2C_ESP32C6_HARDWARE_NOTES.md  PWM_DRIVER_ANALYSIS.md  SPI_V2_UPGRADE_GUIDE.md  SYSTEM_SERVICES_ANALYSIS.md  UART_V4_UPGRADE_GUIDE.md  adc_driver.c  adc_driver.h  bitwise_gpio_example.c  bitwise_gpio_example.h  ble_driver.c  ble_driver.h  ble_driver_old.c  gpio_driver.c  gpio_driver.h  i2c_driver.c  i2c_driver.h  pwm_driver.c  pwm_driver.h  spi_driver.c  spi_driver.h  system_services.c  system_services.h  uart_driver.c  uart_driver.h  uart_driver_backup.c  uart_driver_simple.c
main/docs/: GPIO_Control_Methods_Comparison.md
main/input/: battery_sensor.c  battery_sensor.h  encoder_sensor.c  encoder_sensor.h  gps_sensor.c  gps_sensor.h  imu_sensor.c  imu_sensor.h
main/logic/: kalman_filter.c  kalman_filter.h  pid_controller.c  pid_controller.h
main/output/: ble_controller.c  ble_controller.h  motor_control.c  motor_control.h  servo_standup.c  servo_standup.h
main/system/: config_manager.c  config_manager.h  error_recovery.c  error_recovery.h  protocol.c  protocol.h
posix_simulator/: CMakeLists.txt  FreeRTOSConfig.h  main_posix.c  mock_bsw.c  mock_bsw.h  mock_components.c  mock_esp.c  mock_esp.h
posix_simulator/input/: imu_sensor_mock.c
posix_simulator/logic/: kalman_filter.h  pid_controller.c  pid_controller.h
posix_simulator/output/: ble_controller_mock.c
posix_simulator/system/: config_manager_mock.c  protocol.c
reference/: BLE_API_Specification.md  Embedded_Developer_Specification.md
tools/: README.md  integrated_simulator.py  realtime_debug.py  realtime_plotter.py  requirements.txt  simulator_data_20251008_174130.csv  simulator_data_20251008_174227.csv  simulator_data_20251008_174344.csv  simulator_log_20251008_174130.txt  simulator_log_20251008_174227.txt  simulator_log_20251008_174344.txt  simulator_plotter.py  test_parser.py  test_subprocess.py  visual_simulator.py
